inline italic and strong

--- a/cat.html
+++ b/cat.html
@@ -9,7 +9,7 @@
       <img src="mittens.jpg" alt="An image of mittens" />
       </h1>
 
-  <p>Mittens is the best cat in the world. He is as brave as a lion as strong as an elephant as wise as a turtle as fast as <em>flash</em>, has an appetite of a pig!</p>
+  <p>Mittens is the best cat in the world. He is as <strong>brave</strong> as a lion as strong as an elephant as wise as a turtle as fast as <em>flash</em>, has an appetite of a pig!</p>
 <!-- Add in section about history of cookies? <h3> History of cookies </h3> <p>Most people don't know the complicated past of the cookie. FINISH -->
     <h2>Mittens Favourite things</h2>
 
