--- a/cat.html
+++ b/cat.html
@@ -36,8 +36,8 @@
         <li>Bake for <strong>10 minutes</strong> or until golden brown.</li>
        </ol>
 
-  <p><a href="mittens.jpg">Click here</a> to see mitten again.</p>
+  <p><a href="mittens.jpg">Click here</a> to see mittens again.</p>
 
-
+<a href="mittens.jpg"> Mittens is super cute. Click here </a>
 </body>
 </html>
