--- a/cat.html
+++ b/cat.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Cat Mittens</title>
+      <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
    <body>
 
@@ -11,6 +12,8 @@
 
   <p>Mittens is the best cat in the world. He is as <strong>brave</strong> as a lion as strong as an elephant as wise as a turtle as fast as <em>flash</em>, has an appetite of a pig!</p>
 <!-- Add in section about history of cookies? <h3> History of cookies </h3> <p>Most people don't know the complicated past of the cookie. FINISH -->
+
+<div class="important">
     <h2>Mittens Favourite things</h2>
 
     <ul>
@@ -24,7 +27,9 @@
       <li>Tummy rubbed</li>
 
     </ul>
+  </div>
 
+<div class="unimportant">
    <h2>Things Mittens hates</h2>
 
        <ol>
@@ -35,6 +40,7 @@
         <li>Stir in chocolate chips, oatmeal and coconut.</li>
         <li>Bake for <strong>10 minutes</strong> or until golden brown.</li>
        </ol>
+     </div>
 
   <p><a href="mittens.jpg">Click here</a> to see mittens again.</p>
 
